# EGO-Planner-V2.1

./: .gitignore  README.md
doc/: 231223.md
src/custom_msgs/quadrotor_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/quadrotor_msgs/include/: comm_types.h  decode_msgs.h  encode_msgs.h
src/custom_msgs/quadrotor_msgs/msg/: PositionCommand.msg
src/custom_msgs/quadrotor_msgs/src/: decode_msgs.cpp  encode_msgs.cpp
src/custom_msgs/trajectory_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/trajectory_msgs/msg/: MINCOTraj.msg
src/ego_planner/: CMakeLists.txt  package.xml
src/ego_planner/include/drone_detector/: drone_detector.h
src/ego_planner/include/optimizer/: gcopter.hpp  lbfgs.hpp  poly_traj_optimizer.h  poly_traj_utils.hpp  root_finder.hpp
src/ego_planner/include/path_searching/: dyn_a_star.h  ompl_search.h
src/ego_planner/include/plan_env/: grid_map.h  grid_map_bigmap.h  raycast.h
src/ego_planner/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
src/ego_planner/include/traj_utils/: plan_container.hpp  planning_visualization.h
src/ego_planner/launch/: bridge_udp.launch  drone_detect.launch  obstacle_run.launch
src/ego_planner/scripts/: diffdrive_acados.py
src/ego_planner/src/: bridge_node_udp.cpp  drone_detect_node.cpp  ego_planner_node.cpp  moving_obstacles.cpp  traj2odom_node.cpp  traj_server.cpp
src/ego_planner/src/drone_detector/: drone_detector.cpp
src/ego_planner/src/optimizer/: poly_traj_optimizer.cpp
src/ego_planner/src/path_searching/: dyn_a_star.cpp  ompl_search.cpp
src/ego_planner/src/plan_env/: grid_map.cpp  grid_map_bigmap.cpp  raycast.cpp
src/ego_planner/src/plan_manage/: ego_replan_fsm.cpp  planner_manager.cpp
src/ego_planner/src/traj_utils/: planning_visualization.cpp
src/node_launcher/: CMakeLists.txt  package.xml
src/node_launcher/config/: closeup.rviz  cmu_single_air.rviz  cmu_single_gnd.rviz  default.rviz  habitat.rviz  habitat_multi.rviz  habitat_single_air.rviz  habitat_single_gnd.rviz  habitat_topdown.rviz  habitat_topdown_transparent.rviz  topdown.rviz
src/node_launcher/launch/: air_gnd_coord.launch  circle_exchange.launch  circle_exchange_large.launch  diffdrive_mpc_waypoint.launch  diffdrive_opt_waypoint.launch  moving_obstacles_avoidance.launch  multi_drone_interactive.launch  path_guide_air.launch  path_guide_gnd.launch  single_copter_interactive_habitat.launch  single_diffdrive_interactive_habitat.launch  single_drone_interactive.launch  single_drone_waypoints.launch  single_omnidrive_interactive_habitat.launch  swarm.launch  swarm_avoidance.launch  swarm_habitat.launch  swarm_large.launch
src/node_launcher/launch/CMU/: single_copter_interactive_cmu.launch  single_omnidrive_interactive_cmu.launch
src/node_launcher/launch/HAB/: swarm_habitat.launch
src/node_launcher/launch/ZJU/: autoflight.launch  single_drone_interactive.launch  single_drone_waypoints.launch  swarm.launch
src/node_launcher/launch/include/: advanced_param.xml  habitat_sim.xml  run_in_habitat.xml  run_in_sim.xml  simulator.xml
src/simulator/: CMakeLists.txt  package.xml  plugin_description.xml
src/simulator/assets/cmu/: download.sh  download.txt
src/simulator/config/: habitat_renderer.rviz  mockamap.rviz  scene_pcd.rviz
src/simulator/include/mockamap/: maps.hpp  perlinnoise.hpp
src/simulator/include/rviz_plugins/: goal_tool.h  pose_tool.h  selected_points_publisher.hpp
src/simulator/include/uav_utils/: converters.h  geometry_utils.h  utils.h
src/simulator/launch/habitat/: habitat_renderer.launch  habitat_viewer.launch  scene_mesh_to_pcd.launch
src/simulator/launch/manual_take_over/: take_over_drone.launch  take_over_station.launch
src/simulator/launch/mockamap/: maze2d.launch  maze3d.launch  mockamap.launch  perlin3d.launch  post2d.launch
src/simulator/launch/random_goals/: random_goals.launch
src/simulator/scripts/: cmu_env_pcd_publisher.py  habitat_renderer.py  habitat_viewer.py  scene_mesh_to_pcd.py
src/simulator/scripts/uav_utils/: odom_to_euler.py  send_odom.py  tf_assist.py  topic_statistics.py
src/simulator/src/: assign_goals_node.cpp  ground_station.cpp  manual_take_over.cpp  mockamap.cpp  odom_visualization.cpp  pointcloud_render_node.cpp  poscmd_2_odom.cpp  random_forest_sensing.cpp  random_goals_node.cpp
src/simulator/src/mockamap/: ces_randommap.cpp  maps.cpp  perlinnoise.cpp
src/simulator/src/pose_utils/: pose_utils.cpp
src/simulator/src/rviz_plugins/: goal_tool.cpp  pose_tool.cpp  selected_points_publisher.cpp
